deploy/app-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
spec:
  replicas: 2
  selector:
    matchLabels:
      name: api
  template:
    metadata:
      labels:
        name: api
    spec:
      containers:
        - name: application
          image: json0/cloud-platform-go-get-module:0.0.1
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
