deploy/app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
spec:
  replicas: 2
  selector:
    matchLabels:
      name: api
  template:
    metadata:
      labels:
        name: api
    spec:
      containers:
        - name: application
          image: jaskaransarkaria/cloud-platform-go-get-module:VERSION
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
          readinessProbe:
              httpGet:
                path: /healthz
                port: 3000
              initialDelaySeconds: 5
