deploy/app-ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api
  annotations:
    external-dns.alpha.kubernetes.io/set-identifier: api-blue
    external-dns.alpha.kubernetes.io/aws-weight: "100"
spec:
  tls:
    - hosts:
        - modules.apps.live-2.cloud-platform.service.justice.gov.uk
  rules:
    - host: modules.apps.live-2.cloud-platform.service.justice.gov.uk
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: api
                port:
                  number: 3001
